--- a/week4/product.html
+++ b/week4/product.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"
         href="https://cdn2.iconfinder.com/data/icons/social-icons-circular-color/512/flipkart-256.png">
-    <title>Vue 第三周LV3 - 產品頁面</title>
+    <title>Vue 第四周LV3 - 產品頁面</title>
 
     <!-- BS5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,7 +33,7 @@
                 <button type="button" class="btn btn-sm btn-success" @click="openModal('new')">
                     建立新的產品
                 </button>
-                <h1 class="h3 mb-0">第三周 產品後台列表</h1>
+                <h1 class="h3 mb-0">第四周 產品後台列表</h1>
                 <button type="button" class="btn btn-sm btn-outline-warning" @click="logout">
                     登出
                 </button>
